sea-query-attr/tests/compile-fail/tuple_struct.rs
use sea_query_attr::enum_def;

#[enum_def]
struct Hello(String);

fn main() {}
