sea-query-attr/tests/compile-fail/tuple_struct.stderr
error: #[enum_def] can only be used on structs
 --> tests/compile-fail/tuple_struct.rs:4:1
  |
4 | struct Hello(String);
  | ^^^^^^
